--- a/foundations/03-grouping-selectors/style.css
+++ b/foundations/03-grouping-selectors/style.css
@@ -4,3 +4,11 @@
   font-size: 28px;
 }
 
+.first {
+  background-color: #000000;
+  color: rgb(255, 255, 255)
+}
+
+.second {
+  background-color: yellow;
+}
