--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -50,6 +50,11 @@ body {
   justify-content: center;
 }
 
+.first-line {
+  display: flex;
+  justify-content: space-between;
+}
+
 button {
   padding: 8px 16px;
   border-radius: 8px;
