--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -21,7 +21,19 @@ body {
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
   display: flex;
+  gap: 15px;
+  padding: 15px;
 }
+
+.header {
+  font-weight: bold;
+  font-size: large;
+  margin-bottom: 10px;
+}
+
+.text {
+  margin-bottom: 15px;
+} 
 
 .icon {
   color: royalblue;
