--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -45,6 +45,10 @@ ul {
   padding-left: 0;
 }
 
+li {
+  margin-bottom: 16px;
+}
+
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
@@ -63,4 +67,5 @@ ul {
 
 .middle {
   display: flex;
+  flex: 1;
 }
