--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -54,14 +54,13 @@ li {
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
   width: 300px;
-  height: 200px;
   padding: 16px;
+  margin: 16px;
 }
 
 .all-cards {
   display: flex;
   padding: 32px;
-  gap: 20px;
   flex-wrap: wrap;
 }
 
